DBMS -> SSO -(KAFKA or DB)-> DBMS 데이터 송수신 추가

--- a/sso/src/main/resources/application.yml
+++ b/sso/src/main/resources/application.yml
@@ -31,7 +31,10 @@ dbms:
 save:
   agent:
     - id: JY-SAVE
-    - network: OUT
+    - network: IN
+action:
+  agent:
+    - id: JY-ACTION-02
 sso:
   properties:
     - network: IN
