--- a/sso/src/main/resources/application.yml
+++ b/sso/src/main/resources/application.yml
@@ -40,4 +40,7 @@ action:
   
 sso:
   properties:
+    session-id: JYSESSION
+    session-db-id: JYDBID
+    session-db-pw: JYDBPW
     network: OUT
