--- a/sso/src/main/resources/application.yml
+++ b/sso/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
       ddl-auto: update
   mvc:
     view:
-      prefix: /WEB-INF/view/
+      prefix: /WEB-INF/view
       suffix: .jsp
   session:
     timeout: 120
@@ -23,9 +23,9 @@ spring:
 #    url: jdbc:oracle:thin:@localhost:1521:orcldb
 #    username: sso
 #    password: 1111
-server:
-  tomcat:
-    additional-tld-skip-patterns: "oraclepki.jar"
+#server:
+#  tomcat:
+#    additional-tld-skip-patterns: "oraclepki.jar"
 dbms:
   url: http://10.47.39.102:8080
 
