Scheduler cron - yml로 변경

--- a/sso/src/main/resources/application.yml
+++ b/sso/src/main/resources/application.yml
@@ -41,3 +41,7 @@ sso:
     session-db-id: JYDBID
     session-db-pw: JYDBPW
     network: IN
+  
+schedule:
+  userScheduler: '0/10 * * * * *'
+  deleteUserScheduler: '0 0 0 * * *'
